# glry

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: ai.rs  app.rs  cache.rs  config.rs  main.rs  scan.rs  thumbnail.rs
src/ui/: fullscreen.rs  grid.rs  info.rs  list.rs  mod.rs
